bobcat (4.05.00)

  * The fwap function was redesigned, to allow fast swapping for classes of
    which some members (or their base class(es)) cannot be fast-swapped.
    Thus far, this only involves classes having std::string members.

  * All Bobcat classes using fswap have been updated where necessary. They
    are: CGI, Cidr, CmdFinderBase, CmdFinder, Glob, Hostent, MailHeaders,
    Pattern, SharedMemory, Stat, TableSupport, and User.

  * A member `swap' was added to the classes CGI, Cidr, CmdFinder, and
    CmdFinderBase.

  * -lpthread was removed from INSTALL.im: it is already available for
    required classes (see icmake/special), and causes problems on some
    operating systems/distributions when it is additionally specified in
    INSTALL.im. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 10 Dec 2016 13:27:41 +0100

bobcat (4.04.00)

  * Added new class template 'BinopsBase' implementing binary operators. The
    class Binops can also be used, but sometimes causes namespace problems
    which do not occur when using BinopsBase.

  * Added missing 'inline' declarations to the definitions in 
    ibase64streabuf1.f and ibase64streabuf2.f.

  * Replaced return *gptr() by return static_cast<unsigned char>(*gptr())
    in underflow members of (i)streambuf classes to prevent promotions of
    characters 0xff to -1, which is EOF.

  * Added missing DateTime::timeStruct (inline) implementation to DateTime.

  * Since the global errno variable is used by too much code, Exception{x}
    constructors now also store x in a thread_local int FBB::g_errno variable.

  * GetHostent was rebuilt using getaddrinfo and getnameinfo.

  * Glob received two new flags: NO_FLAG and NOMATCH (refer to its man-page
    for details). 

  * Added member Arg::help() calling the usage function that was passed to
    Arg::versionHelp (refer to its man-page for details).

  * Added member int exitStatus() to Process returning the child process's