@@ -5,8 +5,8 @@ arg
 argconfig
 base64streambufbase
 binarysearch
-binopsbase
 binops
+binopsbase
 cgi
 cidr
 clientsocket
@@ -16,6 +16,8 @@ configfile
 csv
 datetime
 exception
+execfork
+extractorfork
 fbb
 fork
 fswap
@@ -32,6 +34,7 @@ ifdstreambuf
 ifilterstreambuf
 indent
 inetaddress
+inserterfork
 iostream
 iostreambuf
 irandstream
@@ -68,6 +71,7 @@ ranger
 redirector
 repeat
 selector
+semaphore
 serversocket
 sharedblock
 sharedcondition
@@ -94,4 +98,3 @@ tty
 typetrait
 user
 x2a
-semaphore
