@@ -108,6 +108,14 @@ The following classes and functions are available:
     and are also tt(std::exception) objects.nl()
     Manpage(exception)
 
+    bf(FBB::ExecFork): Executes child processes not expecting input and not
+    producing standard output.  nl()
+    Manpage(execfork)
+
+    bf(FBB::ExtractorFork): Executes child processes not expecting input but
+    maybe producing standard output. nl()
+    Manpage(extractorfork)
+
     bf(FBB::Fork): Defines bf(fork)(2) as part of a Template Algorithm Design
     Pattern. nl()
     Manpage(fork)
@@ -153,6 +161,10 @@ The following classes and functions are available:
     representing an internet address as used with sockets. Contains address
     and portnumbers. nl()
     Manpage(inetaddress)
+
+    bf(FBB::InserterFork): Executes child processes expecting input but not
+    producing standard output. nl()
+    Manpage(inserterfork)
 
     bf(FBB::IOStream): class combining tt(std::istream) and tt(std::ostream)
     features. nl()
@@ -648,9 +660,21 @@ COMMENT(    it() bf(DEPRECATED CLASSES))
 
     it() bf(PROCESSES, SIGNALS, THREADS)
 
+    bf(FBB::ExecFork): Executes child processes not expecting input and not
+    producing standard output.  nl()
+    Manpage(execfork)
+
+    bf(FBB::ExtractorFork): Executes child processes not expecting input but
+    maybe producing standard output. nl()
+    Manpage(extractorfork)
+
     bf(FBB::Fork): Defines bf(fork)(2) as part of a Template Algorithm Design
     Pattern. nl()
     Manpage(fork)
+
+    bf(FBB::InserterFork): Executes child processes expecting input but not
+    producing standard output. nl()
+    Manpage(inserterfork)
 
     bf(FBB::Process): Runs child processes, defining pipes between parents and
     child processes. nl()
