@@ -1,0 +1,6 @@
+#include "extractorfork.ih"
+
+void ExtractorFork::childRedirections()
+{
+    d_iChildOutPipe.writtenBy(STDOUT_FILENO);
+}
