@@ -1,0 +1,4 @@
+#include "extractorfork.ih"
+
+ExtractorFork::~ExtractorFork()
+{}
