@@ -1,0 +1,5 @@
+#include "extractorfork.ih"
+
+ExtractorFork::
+{
+}
