@@ -1,0 +1,4 @@
+#define LIBRARY             "extractorfork"
+
+#include "../icmconf"
+
