@@ -1,0 +1,6 @@
+//#include "extractorfork.ih"
+//
+//int ExtractorFork::stop()
+//{
+//    return waitForChild();
+//}
