@@ -1,0 +1,6 @@
+#include "inserterfork.ih"
+
+InserterFork::~InserterFork()
+{
+    d_oChildIn.flush();
+}
