@@ -1,0 +1,5 @@
+#include "inserterfork.ih"
+
+InserterFork::
+{
+}
