@@ -1,0 +1,4 @@
+#define LIBRARY             "inserterfork"
+
+#include "../icmconf"
+
