@@ -1,0 +1,11 @@
+#include "inserterfork"
+
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+#include <bobcat/redirector>
+
+using namespace std;
+using namespace FBB;
