@@ -1,0 +1,4 @@
+#include "inserterfork.ih"
+
+void InserterFork::parentProcess()
+{}
