@@ -1,5 +1,13 @@
 bobcat (4.05.00)
 
+  * Added classes ExecFork, InserterFork and ExtractorFork executing child
+    processes. These classes are simplified specializations of
+    Process. ExecFork simply executes a child process, and waits until its
+    completion; InserterFork acts similarly, but insertions into an
+    InserterFork object are forwarded to the child process; extractions from
+    ExtractorFork read the information that is written to the ExtractorFork's
+    child process's standard output stream.
+
   * The fwap function was redesigned, to allow fast swapping for classes of
     which some members (or their base class(es)) cannot be fast-swapped.
     Thus far, this only involves classes having std::string members.
@@ -16,7 +24,7 @@ bobcat (4.05.00)
     operating systems/distributions when it is additionally specified in
     INSTALL.im. 
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 10 Dec 2016 13:27:41 +0100
+
 
 bobcat (4.04.00)
 
